# worca-cc

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  MASTER_PLAN.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: post_tool_use.py  pre_tool_use.py  user_prompt_submit.py
.claude/scripts/: run_learn.py  run_parallel.py  run_pipeline.py  worca.py
.claude/worca-ui/: package-lock.json  package.json
.github/workflows/: release.yml  test-e2e.yml  test.yml
.husky/: pre-commit
docs/: IDEAS.md
docs/plans/: 2026-03-08-worca-ui-design.md  2026-03-08-worca-ui-e2e-server-tests.md  2026-03-08-worca-ui-plan.md  (+30 more)
tests/: conftest.py  test_agent_telemetry.py  test_batch.py  test_beads.py  test_beads_init.py  test_claude_cli.py  test_error_classifier.py  test_event_types.py  test_gh_issues.py  test_git_worktree.py  test_guard.py  test_iteration_resume.py  test_learn_schema.py  test_learner_agent.py  test_multi_pipeline.py  test_overlay.py  test_plan_check.py  test_plan_file_location.py  test_project_registry.py  test_prompt.py  test_prompt_builder.py  test_prompt_builder_learn.py  test_registry.py  test_resume.py  test_run_learn_script.py  test_run_parallel.py  test_run_pipeline.py  test_runner.py  test_runner_learn.py  test_runner_lifecycle.py  test_session.py  test_settings_learn.py  test_stages.py  test_status.py  test_test_gate_persistence.py  test_tracking.py  test_webhook_schemas.py  test_webhook_spec.py  test_worca_cli.py  test_work_request.py  (+1 more)
(+161 files in other folders)
