[project]
name = "worca-cc"
version = "0.1.0"
description = "Autonomous software development pipeline combining orchestration with governance enforcement"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".claude"]

[tool.ruff]
target-version = "py38"
line-length = 100
